deployments/kube/beta.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: beta-x2-core-multi-product
    version: primary
  name: beta-x2-core-multi-product
  namespace: beta-x2-mass-banking
spec:
  replicas: 1
  selector:
    matchLabels:
      type: beta-x2-core-multi-product
  template:
    metadata:
      labels:
        type: beta-x2-core-multi-product
        version: primary
    spec:
      serviceAccountName: beta-x2-core-multi-product-sa
      containers:
        - name: beta-x2-core-multi-product-http-server
          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/x2-core-multi-product:$IMGTAGHTTPSERVER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: beta-x2-core-multi-product-quality-engine-consumer
          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/x2-core-multi-product:$IMGTAGCONSUMERQUALITYENGINE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: beta-x2-core-multi-product
  namespace: beta-x2-mass-banking
spec:
  ports:
    - name: http-beta-x2-core-multi-product
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    type: beta-x2-core-multi-product
  type: ClusterIP
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: beta-x2-core-multi-product-vs
  namespace: beta-x2-mass-banking
spec:
  gateways:
    - beta-x2-mass-banking-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /x2-core/beta/multi-product
      route:
        - destination:
            host: beta-x2-core-multi-product.beta-x2-mass-banking.svc.cluster.local
            port:
              number: 8080
            subset: primary
          weight: 100

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: beta-x2-core-multi-product-dr
  namespace: beta-x2-mass-banking
spec:
  host: beta-x2-core-multi-product.beta-x2-mass-banking.svc.cluster.local
  subsets:
    - labels:
        version: primary
      name: primary
