deployments/kube/prod.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: prod-x2-core-multi-product
    version: primary
  name: prod-x2-core-multi-product
  namespace: prod-x2-mass-banking
spec:
  replicas: 1
  selector:
    matchLabels:
      type: prod-x2-core-multi-product
  template:
    metadata:
      labels:
        type: prod-x2-core-multi-product
        version: primary
    spec:
      serviceAccountName: prod-x2-core-multi-product-sa
      containers:
        - name: prod-x2-core-multi-product-http-server
          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/x2-core-multi-product:$IMGTAGHTTPSERVER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: prod-x2-core-multi-product-quality-engine-consumer
          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/x2-core-multi-product:$IMGTAGCONSUMERQUALITYENGINE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: prod-x2-core-multi-product
  namespace: prod-x2-mass-banking
spec:
  ports:
    - name: http-prod-x2-core-multi-product
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    type: prod-x2-core-multi-product
  type: ClusterIP

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prod-x2-core-multi-product-vs
  namespace: prod-x2-mass-banking
spec:
  gateways:
    - prod-x2-core-gateway
  hosts:
    - niyox2-oacr-d1feaa86a59f9ce879377ed276922071.goniyo.com
    - niyox2-oa-core-istio-internal-gateway.prod.niyox2
  http:
    - match:
        - uri:
            prefix: /x2-core/prod/multi-product
      route:
        - destination:
            host: prod-x2-core-multi-product.prod-x2-mass-banking.svc.cluster.local
            port:
              number: 8080
            subset: primary
          weight: 100

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prod-x2-core-multi-product-dr
  namespace: prod-x2-mass-banking
spec:
  host: prod-x2-core-multi-product.prod-x2-mass-banking.svc.cluster.local
  subsets:
    - labels:
        version: primary
      name: primary
